--- a/pc/home.html
+++ b/pc/home.html
@@ -42,9 +42,9 @@
         <section class="project">
           <div class="project_menue">
             <li>
-              <ul id="button1"><img src="../pcimg/file.png" width="18"><p>WEBdesign</p></ul>
-              <ul id="button2"><img src="../pcimg/file.png" width="18"><p>DTP</p></ul>
-              <ul id="button3"><img src="../pcimg/file.png" width="18"><p>REALevent</p></ul>
+              <ul id="button1"><img src="../pcimg/file.png" width="18" height="14"><p>WEBdesign</p></ul>
+              <ul id="button2"><img src="../pcimg/file.png" width="18" height="14"><p>DTP</p></ul>
+              <ul id="button3"><img src="../pcimg/file.png" width="18" height="14"><p>REALevent</p></ul>
             </li>
           </div>
           <div class="project_name">
