--- a/sp/index.html
+++ b/sp/index.html
@@ -25,17 +25,19 @@
   </section>
 
   <section class="tab02">
-    <div class="WEBdesign">
-      <img src="../spimg/SP_WEBdesign.png" class="fileList" href="#webdesign" width="65">
-      <p>WEBdesign</p>
-    </div>
-    <div class="DTP">
-      <img src="../spimg/SP_DTP.png" class="fileList" href="#dtp" width="65">
-      <p>DTP</p>
-    </div>
-    <div class="REAL">
-      <img src="../spimg/SP_REALevent.png" class="fileList" href="#real" width="65">
-      <p>REALevent</p>
+    <div class="icon">
+      <div class="WEBdesign">
+        <img src="../spimg/SP_WEBdesign.png" class="fileList" href="#webdesign" width="65">
+        <p>WEBdesign</p>
+      </div>
+      <div class="DTP">
+        <img src="../spimg/SP_DTP.png" class="fileList" href="#dtp" width="65">
+        <p>DTP</p>
+      </div>
+      <div class="REAL">
+        <img src="../spimg/SP_REALevent.png" class="fileList" href="#real" width="65">
+        <p>REALevent</p>
+      </div>
     </div>
   </section>
 
