--- a/sp/sp_w02.html
+++ b/sp/sp_w02.html
@@ -27,7 +27,7 @@
 <section class="container">
   <section class="content">
     <section class="project">
-      <h2 class="fadein">#direction#design#planning#graphic</h2>
+      <h2 class="fadein">#direction#design<br>#planning#graphic</h2>
       <p class="fadein">LPデザインを構成から作成を担当。必要情報の精査、写真構成など。わかりやすく情報を伝えるためのデザイン提案を行なった。必要なイメージ写真収集、イラストの作成も。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
