--- a/sp/sp_d01.html
+++ b/sp/sp_d01.html
@@ -27,7 +27,7 @@
 <section class="container">
   <section class="content">
     <section class="project">
-      <h2 class="fadein">#direction#design#planning#graphic</h2>
+      <h2 class="fadein">#direction#design<br>#planning#graphic</h2>
       <p class="fadein">新商品同梱物の冊子デザインを担当。サイトとの親和性を保ち、ブランドイメージの踏襲を行なった。文字構成や写真構成から参画し、ユーザー目線で伝わりやすい内容になるように作成。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-DTP</h2></div>
