--- a/sp/sp_w01.html
+++ b/sp/sp_w01.html
@@ -27,7 +27,7 @@
 <section class="container">
   <section class="content">
     <section class="project">
-      <h2 class="fadein">#direction#design<br>#planning#graphic</h2>
+      <h2 class="fadein">#direction#design#planning#graphic</h2>
       <p class="fadein">新商品のwebサイトの作成を担当。ブランディングからプロジェクトに参加し、ブランドにあったサイトイメージの提案から、使いやすさを考慮したUI/UXの提案も行い、デザイン設計を行なった。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
