--- a/sp/sp_w02.html
+++ b/sp/sp_w02.html
@@ -10,7 +10,7 @@
   <a href="webdesign.html" alt="WEBdesignの一覧ページに戻ります">
   <section class="top">
     <section class="back">
-      <img src="../spimg/back_button.png" width="80" alt="戻るボタン">
+      <img src="../spimg/back_button.png" width="70" alt="戻るボタン">
     </section>
     <section class="icon">
       <img src="../spimg/w02_kv.jpg" width="50" height="50" style="border-radius: 50%;">
@@ -27,7 +27,7 @@
 <section class="container">
   <section class="content">
     <section class="project">
-      <h2 class="fadein">#direction#design<br>#planning#graphic</h2>
+      <h2 class="fadein">#direction#design#planning#graphic</h2>
       <p class="fadein">LPデザインを構成から作成を担当。必要情報の精査、写真構成など。わかりやすく情報を伝えるためのデザイン提案を行なった。必要なイメージ写真収集、イラストの作成も。</p>
       <div class="url fadein">
         <div class="url_title"><h2>-WEBdesign</h2></div>
