--- a/pc/index.html
+++ b/pc/index.html
@@ -36,7 +36,7 @@
   </main>
 
   <section id="file">
-    <iframe src="file.html" frameBorder="0" width="80%" height="600" style="border-radius:20px" style="border: none;"></iframe>
+       <iframe src="file.html" frameBorder="0" width="80%" height="600" style="border-radius:20px;box-shadow: 0 0 10px #8080808c;" style="border: none;"></iframe>
     <section id="close">
       <input type="image" value="非表示" src="../pcimg/close.png" width="18"
       onclick="document.getElementById('file').style.visibility = 'hidden';">
