--- a/pc/profile.html
+++ b/pc/profile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="format-detection" content="telephone=no">
+  <meta name="format-detection" content="email=no,telephone=no,address=no">
   <title>Y.KOYANAGAWA PROFILE</title>
   <link rel="stylesheet" href="profile.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
