--- a/sp/concept.html
+++ b/sp/concept.html
@@ -12,54 +12,52 @@
 </head>
 <body>
 
-  <section class="content_wrapper">
-    <section class="title">
-      <h1>CONCEPT</h1>
-      <h2>REAL×DIGITAL</h2>
-    </section>
-    <section class="content">
-      <img src="../spimg/co_content01.png" width="100%">
-      <h1 class="fadein">「リアル」よりも「リアル」なデジタル</h1>
-      <p class="fadein">
-        皆さんはデジタル上で強烈な「リアル」を得た経験はありますでしょうか?
-        <br><br>
-        「リアルよりもリアルに感じる」そんな瞬間は少なからず何かを共感している時ではないでしょうか?
-        <br>
-        「何度も訪れた場所が映像で映る」「経験のある体験談を目にする」など、
-        このポートフォリオは、毎日何度も繰り返し行なっている体験や身体に染み付いた感覚を呼び起こすとどう感じるのか?
-        <br><br>
-        デジタルでも強烈な「リアル」を感じことができるのではないか?という考えを元に作成しました。
-      </p>
-    </section>
-  </section>
-
-  <section class="footer">
-    <section class="text">
-      <h3>CONCEPT</h3>
-      <h1 class="fadein">「リアルとデジタルで感じる情報はどう違うのか?」</h1>
-      <p class="fadein">
-        「リアルとデジタルで感じる情報はどう違うのか?」
-        新型コロナウイルスが蔓延し、様々な方がこういった議題を目にされたかと思います。
-        当時空間デザイナーだった私にはこの議題は死活問題で、よく思考を巡らせておりました。
-        <br><br>
-        リアルは「無意識な情報」、デジタルは「有意識的な情報」という違いがあるというのが私の中での1つの結論です。
-        <br><br>
-        「無意識な情報」は、作り手が意図していない発見や気付きする余地のある情報のことです。
-        <br>
-        「有意識な情報」には、作り手が伝えたい内容や想いがふんだんに掲載されており、意図した通りに受け取ってもらうことが重要な情報のことです。
-      </p>
-      <img class="fadein" src="../spimg/co_content02.png" width="100%">
-      <p class="fadein">
-        リアルの無意識的に収集する情報や発見は、記憶するのに最も効果的な情報であり、残念ながら現在ではまだ、デジタル上でこれらを完全再現することはできないのではないかと考えております。
-        <br><br>
-        同時に、もしこの無意識レベルの情報の収集や発見、これらに近しい体験をデジタル上でできたら、強烈な形状記憶になり、新たな体験になるのではないか。そのように考えております。
-        <br><br>
-        また、リアルでは緻密な情報を散りばめた空間(強烈な世界観で、誰が体験しても同じものを感じる)を作りだすとどうなるのか。
-        無意識レベルの情報を操作することは可能なのか?
-      </p>
-      <p class="fadein">
-        そのようなリアルとデジタルの情報の性質の交換をして、2つの世界を横断し、新たな体験を生み出す人材になる、これが私の目指すデザインの指標の1つです。
-      </p>
+  <header id="header">
+    <img src="../spimg/img/check.png" width="40" height="40">
+  </header>
+  
+  <section class="container">
+    <section class="content_wrapper">
+      <section class="title markfadein">
+        <img src="img/scroll_mark.png" width="5%" height="5%">
+      </section>
+      <section class="content">
+        <h3>CONCEPT</h3>
+        <h1 class="fadein">「リアル」よりも「リアル」なデジタル</h1>
+        <p class="fadein">
+          皆さんはデジタル上で強烈な「リアル」を得た経験はありますでしょうか?<br>
+          「リアルよりもリアルに感じる」そんな瞬間は少なからず何かを共感している時ではないでしょうか?
+          「何度も訪れた場所が映像で映る」「経験のある体験談を目にする」など、
+          このポートフォリオは、毎日何度も繰り返し行なっている体験や身体に染み付いた感覚を呼び起こすとどう感じるのか?
+          デジタルでも強烈な「リアル」を感じことができるのではないか?という考えを元に作成しました。
+        </p>
+      </section>
+      <section class="text fadein">
+        <h1 class="fadein">「リアルとデジタルで感じる情報はどう違うのか?」</h1>
+        <p class="fadein">
+          「リアルとデジタルで感じる情報はどう違うのか?」
+          新型コロナウイルスが蔓延し、様々な方がこういった議題を目にされたかと思います。
+          当時空間デザイナーだった私にはこの議題は死活問題で、よく思考を巡らせておりました。
+          リアルは「無意識な情報」、デジタルは「有意識的な情報」という違いがあるというのが私の中での1つの結論です。
+          「無意識な情報」は、作り手が意図していない発見や気付きする余地のある情報のことです。
+          「有意識な情報」には、作り手が伝えたい内容や想いがふんだんに掲載されており、意図した通りに受け取ってもらうことが重要な情報のことです。
+        </p>
+        <img class="fadein" src="img/co_concept.png" width="100%">
+        <p class="fadein">
+          リアルの無意識的に収集する情報や発見は、記憶するのに最も効果的な情報であり、残念ながら現在ではまだ、デジタル上でこれらを完全再現することはできないのではないかと考えております。
+          同時に、もしこの無意識レベルの情報の収集や発見、これらに近しい体験をデジタル上でできたら、強烈な形状記憶になり、新たな体験になるのではないか。そのように考えております。
+          また、リアルでは緻密な情報を散りばめた空間(強烈な世界観で、誰が体験しても同じものを感じる)を作りだすとどうなるのか。
+          無意識レベルの情報を操作することは可能なのか?
+        </p>
+        <p class="fadein">
+          そのようなリアルとデジタルの情報の性質の交換をして、2つの世界を横断し、新たな体験を生み出す人材になる、これが私の目指すデザインの指標の1つです。
+        </p>
+      </section>
+      <section class="footer">
+        <h4>Digital is more real than real.<br>
+          Difference between real and digital information.</h4>
+          <h2>REAL×DIGITAL</h2>
+      </section>
     </section>
   </section>
 
