--- a/sp/background.html
+++ b/sp/background.html
@@ -13,13 +13,13 @@
 <body>
 
   <header id="header">
-    <img src="img/check.png" width="40" height="40">
+    <img src="../spimg/check.png" width="40" height="40">
   </header>
   
   <section class="container">
     <section class="content_wrapper">
       <section class="title markfadein">
-        <img src="img/scroll_mark.png" width="5%" height="5%">
+        <img src="../spimg/scroll_mark.png" width="5%" height="5%">
       </section>
       <section class="content">
         <h3>BACKGROUND</h3>
