--- a/sp/concept.html
+++ b/sp/concept.html
@@ -19,7 +19,7 @@
   <section class="container">
     <section class="content_wrapper">
       <section class="title markfadein">
-        <img src="img/scroll_mark.png" width="5%" height="5%">
+        <img src="../spimg/scroll_mark.png" width="5%" height="5%">
       </section>
       <section class="content">
         <h3>CONCEPT</h3>
