--- a/sp/introduction.html
+++ b/sp/introduction.html
@@ -13,61 +13,84 @@
 </head>
 <body>
   <section class="content_wrapper">
-
     <section class="title">
-      <img src="../spimg/in_icon.png" width="80">
-        <h1>YURI KOYANAGAWA</h1>
-        <h2>designer</h2>
-        <h3>MY FAVORITE</h3>
-      </section>
-
-      <sectin class="content">
-        <div class="content01 fadein">
-          <img src="../spimg/in_content01.png" width="90%">
-          <h4>ACCESSORY</h4>
-        </div>
-        <div class="content02 fadein">
-          <img src="../spimg/in_content02.png" width="90%">
-          <h4>PHOTOGRAPH</h4>
-        </div>
-        <div class="content03 fadein">
-          <img src="../spimg/in_content03.png" width="90%">
-          <h4>SELF NAIL</h4>
-        </div>
-        <div class="content04 fadein">
-          <img src="../spimg/in_content04.png" width="90%">
-          <h4>ACCESSORY</h4>
-        </div>
-      </sectin>
-
-    <p class="fadein">現在フリーランスで、WEBデザインや印刷物のデザインをメインで行なっておりますが、以前は空間デザイナーとして活動させていただいておりました。リアル領域からデジタル領域に転身し、新たに学ぶことも多いですが、日々進歩していける感覚が何より楽しく、そういった機会をいただけることに日々感謝し、お仕事をさせていただいております!
-    </p>
-
-  </section>
-  <section class="footer">
-    <!-- 経歴部分の作成をする -->
-
-    <section class="text">
-      <h3>PROFILE</h3>
-
-      <h1>2014/04 - 2017/03</h1>
-      <p>法政大学デザイン工学部
-        <br>システムデザイン学科</p>
-      <h1>2017/04 - 2021/07</h1>
-      <p>株式会社博展
-      <br>空間デザイナーとして展示会/イベント空間/常設空間などの設計を行う</p>
-      <h1>2021/09 - 2021/10</h1>
-      <p>株式会社レオソフィア
-      <br>webデザイナーとしてLP/web制作を行う</p>
-      <h1>2022/04 - </h1>
-      <p>フリーランスとして活動中</p>
-      <div class="text01 fadein"><p>カラーコーディネーター2級保有</p></div>
-      <div class="text02 fadein"><p>マーケティングビジネス検定C級保有</p></div>
-      
-      <img class="fadein" src="../spimg/in_content05.png" width="100%">
+      <h1>YURI KOYANAGAWA</h1>
+      <h2>designer</h2>
+      <h3>MY FAVORITE</h3>
     </section>
   </section>
 
+  <section class="gif">
+    <img src="../spimg/movie_SP_introduction.gif" width="100%" style="
+  border-top-right-radius: 20px; border-top-left-radius: 20px;">
+    <img class="check" src="../spimg/check.png" width="40" height="40">
+  </section>
+
+  <section class="content_wrapper">
+    <section class="content01 fadein">
+      <img src="../spimg/in_icon.png" width="12%" height="12%">
+      <div class="name">
+        <h1>INTRODUCTION</h1>
+        <h2>Y.KOYANAGAWA</h2>
+      </div>
+    </section>
+    <p class="fadein">現在フリーランスで、WEBデザインや印刷物のデザインをメインで行なっておりますが、以前は空間デザイナーとして活動させていただいておりました。リアル領域からデジタル領域に転身し、新たに学ぶことも多いですが、日々進歩していける感覚が何より楽しく、そういった機会をいただけることに日々感謝し、お仕事をさせていただいております!
+    </p>
+    <section class="content02 fadein">
+      <section class="line">
+        <div class="line01">
+          <h4>2014/04 - 2017/03</h4>
+        </div>
+        <div class="line02">
+          <p>法政大学</p>
+          <h5>デザイン工学部システムデザイン学科</h5>
+        </div>
+      </section>
+      <section class="line">
+        <div class="line01">
+          <h4>2017/04 - 2021/07</h4>
+        </div>
+        <div class="line02">
+          <p>株式会社博展</p>
+          <h5>空間デザイナーとして展示会/イベント空間/常設空間などの設計を行う</h5>
+        </div>
+      </section>
+      <section class="line">
+        <div class="line01">
+          <h4>2021/09 - 2021/10</h4>
+        </div>
+        <div class="line02">
+          <p>株式会社レオソフィア</p>
+          <h5>webデザイナーとしてLP/web制作を行う</h5>
+        </div>
+      </section>
+      <section class="line">
+        <div class="line01">
+          <h4>2022/04 - </h4>
+        </div>
+        <div class="line02">
+          <p>フリーランスとして活動中</p>
+        </div>
+      </section>
+    </section>
+
+    <section class="content03 fadein">
+      <div class="text fadein">
+        <div class="text01"><p>カラーコーディネーター2級保有</p></div>
+        <div class="text01"><p>マーケティングビジネス検定C級保有</p></div>
+      </div>
+      <div class="textimg">
+        <img src="../spimg/in_application.png" alt="アプリケーションについての画像です" width="100%">
+      </div>
+    </section>
+    <section class="footer">
+      <h4>accessory/newEPOCH<br>
+        nail design/Y.KOYANAGAWA<br>
+        photograph/Y.KOYANAGAWA</h4>
+        <h2>MYFAVORITE</h2>
+    </section>
+  </section>
+  
   <script src="js/jquery-3.2.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
