--- a/pc/ba.html
+++ b/pc/ba.html
@@ -10,60 +10,38 @@
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- <img src="img/230925_portfolio_profile-06.jpg" width="100%"> -->
+  <header id="header">
+    <div class="scrolldown1"><span>SCROLL</span></div>
+  </header>
+<section class="container">
+  <section class="wrapper">
+    <h1>BACKGROUND</h1>
+    <h2>i∞block</h2>
 
-  <section class="container">
-    <section class="wrapper">
-      <section class="title">
-        <h1>BACKGROUND</h1>
-        <h2>i∞block</h2>
-      </section>
-
-      <section class="text">
-        <p class="fadein">2〜3歳は想像力を育む事に適した年齢と言われており、その代表的な知育玩具のひとつが積み木と言われている。しかし、既製品の積み木の多くは最初から色が着いたものが販売されており、色彩感覚が子供達の想像力を奪っているのではないかと仮説し、プロダクトを制作。デジタル技術を駆使し、「イロ」を自由につくり出す積み木で発想力を培う知育玩具を学生時代に提案、モックアップ制作を行なった。
-        </p>
-      </section>
-    </section>
-  </section>
-
-  <img class="background fadein" src="../pcimg/ba_content01.png" width="100%">
-
-  <section class="content">
-    <div class="bbs">
-      <ul>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-      </ul>
-      <ul>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-        <li>BACKGROUND</li>
-      </ul>
+    <div class="content01 fadein">
+      <h3>学生時代の作品について</h3>
+      <p>2〜3歳は想像力を育む事に適した年齢と言われており、その代表的な知育玩具のひとつが積み木と言われている。しかし、既製品の積み木の多くは最初から色が着いたものが販売されており、色彩感覚が子供達の想像力を奪っているのではないかと仮説し、プロダクトを制作。デジタル技術を駆使し、「イロ」を自由につくり出す積み木で発想力を培う知育玩具を学生時代に提案、モックアップ制作を行なった。
+      </p>
     </div>
-
-    <section class="wrapper">
-      <section class="content01">
-        <div>
-          <img class="fadein" src="../pcimg/ba_content02.png" width="300">
+    <div class="content02 fadein">
+      <div class="text">
+        <div class="text01">
+          <img src="../pcimg/ba_background.png" alt="アプリケーションについての画像です" width="100%">
         </div>
-        <div>
-          <p class="fadein">学生時代はプロダクトやサービスを0から制作するための学問として、「デザイン」「プログラム」「マーケティング」の3つの領域を横断するような学科に所属してもづくりをしていました。よく課題として挙げられていたのは、「まだこの世にないプロダクトやサービスを制作せよ。」というものでした。市場分析、プロダクト価格の妥当性の検討、新商品企画、ネーミング企画、ターゲット選定、製品内のプログラミングなど、マーケティング観点からデザイン思考、プログラマー視点を持ちながら制作をします。中でも「本質」を見出してものづくりを行うデザイン思考に心を打たれ、デザイナーを志すようになりました。製品には必ず本質的な意義や意図が存在します。常に固定概念や既製品に対して、なぜこの仕様なのか?思考し続けることがデザイナーにとって何よりも学びになることで、求められ続けることだと考えております。</p>
+        <div class="text02">
+          <h3>デザインの原点</h3>
+          <p>学生時代はプロダクトやサービスを0から制作するための学問として、「デザイン」「プログラム」「マーケティング」の3つの領域を横断するような学科に所属してもづくりをしていました。よく課題として挙げられていたのは、「まだこの世にないプロダクトやサービスを制作せよ。」というものでした。市場分析、プロダクト価格の妥当性の検討、新商品企画、ネーミング企画、ターゲット選定、製品内のプログラミングなど、マーケティング観点からデザイン思考、プログラマー視点を持ちながら制作をします。中でも「本質」を見出してものづくりを行うデザイン思考に心を打たれ、デザイナーを志すようになりました。製品には必ず本質的な意義や意図が存在します。常に固定概念や既製品に対して、なぜこの仕様なのか?思考し続けることがデザイナーにとって何よりも学びになることで、求められ続けることだと考えております。</p>
         </div>
-
-      </section>
-    </section>
+      </div>
+    </div>
   </section>
+  <section class="footer">
+    <p>About works from student days.
+      The origin of my design.</p>
+      <h2>i∞block</h2>
+  </section>
+</section>
+
 
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -81,6 +59,6 @@
     });
   });
   </script>
-
+  
 </body>
 </html>
