--- a/pc/in.html
+++ b/pc/in.html
@@ -15,45 +15,37 @@
   </header>
 <section class="container">
   <section class="wrapper">
-    <h1>MY FAVORITE</h1>
-    <h2>accessory  nail design</h2>
+    <h1>INTRODUCTIOIN</h1>
+    <h2>Y.KOYANAGAWA</h2>
 
-      <img class="in01 fadein" src="../pcimg/in_content01.png" width="300">
-      <img class="in02 fadein" src="../pcimg/in_content02.png" width="250">
-      <img class="in03 fadein" src="../pcimg/in_content03.png" width="250">
-
-      <p class="copy fadein">accessory/newEPOCH<br>
-        nail design/Y.KOYANAGAWA<br>
-        photograph/Y.KOYANAGAWA</p>
+    <div class="content01 fadein">
+      <p>現在フリーランスで、WEBデザインや印刷物のデザインをメインで行なっておりますが、以前は空間デザイナーとして活動させていただいておりました。リアル領域からデジタル領域に転身し、新たに学ぶことも多いですが、日々進歩していける感覚が何より楽しく、そういった機会をいただけることに日々感謝し、お仕事をさせていただいております!
+      </p>
+      <ul>
+        <li>2014/04 - 2017/03  法政大学デザイン工学部システムデザイン学科</li>
+        <li>2017/04 - 2021/07  株式会社博展空間デザイナーとして展示会/イベント空間/常設空間などの設計を行う</li>
+        <li>2021/09 - 2021/10  株式会社レオソフィアwebデザイナーとしてLP/web制作を行う</li>
+        <li>2022/04 -          フリーランスとして活動中</li>
+      </ul>
+    </div>
+    <div class="content02 fadein"">
+      <div class="text">
+        <div class="text01"><p>カラーコーディネーター2級保有</p></div>
+        <div class="text02"><p>マーケティングビジネス検定C級保有</p></div>
+      </div>
+      <div class="textimg">
+        <img src="../pcimg/in_application.png" alt="アプリケーションについての画像です" width="80%">
+      </div>
+    </div>
   </section>
-
-  <section class="content">
-    <section class="wrapper">
-      <div class="content01 fadein">
-        <img class="circle01" src="../pcimg/in_proile.png" alt="プロフィール画像です" width="220">
-        <img class="circle02" src="../pcimg/in_profile_circle.png" alt="" width="280">
-      </div>
-      <div class="content02 fadein">
-        <p>現在フリーランスで、WEBデザインや印刷物のデザインをメインで行なっておりますが、以前は空間デザイナーとして活動させていただいておりました。リアル領域からデジタル領域に転身し、新たに学ぶことも多いですが、日々進歩していける感覚が何より楽しく、そういった機会をいただけることに日々感謝し、お仕事をさせていただいております!
-        </p>
-        <ul>
-          <li>2014/04 - 2017/03  法政大学デザイン工学部システムデザイン学科</li>
-          <li>2017/04 - 2021/07  株式会社博展空間デザイナーとして展示会/イベント空間/常設空間などの設計を行う</li>
-          <li>2021/09 - 2021/10  株式会社レオソフィアwebデザイナーとしてLP/web制作を行う</li>
-          <li>2022/04 -          フリーランスとして活動中</li>
-        </ul>
-        <div class="text">
-          <div class="text01"><p>カラーコーディネーター2級保有</p></div>
-          <div class="text02"><p>マーケティングビジネス検定C級保有</p></div>
-        </div>
-      </div>
-      <div class="content03 fadein">
-        <img src="../pcimg/in_application.png" alt="アプリケーションについての画像です" width="100%">
-      </div>
-    </section>
+  <section class="footer">
+    <p>accessory/newEPOCH
+      nail design/Y.KOYANAGAWA
+      photograph/Y.KOYANAGAWA</p>
+      <h2>MYFAVORITE</h2>
   </section>
-
 </section>
+
 
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
