--- a/sp/concept.html
+++ b/sp/concept.html
@@ -13,7 +13,7 @@
 <body>
 
   <header id="header">
-    <img src="../spimg/img/check.png" width="40" height="40">
+    <img src="../spimg/check.png" width="40" height="40">
   </header>
   
   <section class="container">
@@ -42,7 +42,7 @@
           「無意識な情報」は、作り手が意図していない発見や気付きする余地のある情報のことです。
           「有意識な情報」には、作り手が伝えたい内容や想いがふんだんに掲載されており、意図した通りに受け取ってもらうことが重要な情報のことです。
         </p>
-        <img class="fadein" src="img/co_concept.png" width="100%">
+        <img class="fadein" src="../spimg/co_concept.png" width="100%">
         <p class="fadein">
           リアルの無意識的に収集する情報や発見は、記憶するのに最も効果的な情報であり、残念ながら現在ではまだ、デジタル上でこれらを完全再現することはできないのではないかと考えております。
           同時に、もしこの無意識レベルの情報の収集や発見、これらに近しい体験をデジタル上でできたら、強烈な形状記憶になり、新たな体験になるのではないか。そのように考えております。
