--- a/sp/background.html
+++ b/sp/background.html
@@ -33,7 +33,7 @@
         <p class="fadein">
           学生時代はプロダクトやサービスを0から制作するための学問として、「デザイン」「プログラム」「マーケティング」の3つの領域を横断するような学科に所属してもづくりをしていました。よく課題として挙げられていたのは、「まだこの世にないプロダクトやサービスを制作せよ。」というものでした。市場分析、プロダクト価格の妥当性の検討、新商品企画、ネーミング企画、ターゲット選定、製品内のプログラミングなど、マーケティング観点からデザイン思考、プログラマー視点を持ちながら制作をします。中でも「本質」を見出してものづくりを行うデザイン思考に心を打たれ、デザイナーを志すようになりました。意味の無い製品やサービスはこの世にひとつもなく、その製品には必ず本質的な意義や意図が存在します。常に固定概念や既製品に対して、なぜこの仕様なのか?思考し続けることがデザイナーにとって何よりも学びになることで、求められ続けることだと考えております。
         </p>
-        <img class="fadein" src="img/ba_background.png" width="100%">
+        <img class="fadein" src="../spimg/ba_background.png" width="100%">
       </section>
       <section class="footer">
         <h4>About works from student days.<br>
