--- a/pc/co.html
+++ b/pc/co.html
@@ -44,8 +44,7 @@
 </section>
 
 
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script>
   $(function(){
     $(window).scroll(function (){
