--- a/sp/index.html
+++ b/sp/index.html
@@ -6,9 +6,10 @@
   <title>Y.KOYANAGAWA</title>
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/png" href="../spimg/icon.png" sizes="16x16" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Noto+Sans+JP&display=swap" rel="stylesheet">
+  
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Noto+Sans+JP&display=swap" rel="stylesheet">
   
 </head>
 <body>
