--- a/sp/sp_d02.html
+++ b/sp/sp_d02.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Y.KOYANAGAWA DTP</title>
   <link rel="stylesheet" href="sp_d02.css">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Noto+Sans+JP&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <a href="dtp.html" alt="DTPの一覧ページに戻ります">
