--- a/pc/profile.html
+++ b/pc/profile.html
@@ -66,17 +66,17 @@
 
     // イントロダクション
     $("#button1").click(function() {
-      $("#in , #title01").toggle();
+      $("#in , #title01").show();
       $('#co , #ba , #title02 , #title03 , #title00').hide();
     });
     // コンセプト
     $("#button2").click(function() {
-      $("#co , #title02").toggle();
+      $("#co , #title02").show();
       $('#in , #ba , #title01 , #title03 , #title00').hide();
     });
     // バックグラウンド
     $("#button3").click(function() {
-      $("#ba , #title03").toggle();
+      $("#ba , #title03").show();
       $('#in , #co , #title01 , #title02 , #title00').hide();
     });
   </script>
