--- a/pc/home.html
+++ b/pc/home.html
@@ -138,27 +138,27 @@
     });
     // コンテンツ01
     $("#bw01").click(function() {
-    $("#w01, #tw01").toggle();
+    $("#w01, #tw01").show();
     $('#w02 , #w03 , #w04 , #w05 , #d01 , #d02 , #d03 , #d04 , #r01 , #r02 , #r03 , #r04 , #r05 ,#title01 , #title02 , #title03 , #title00 , #tw02 , #tw03 , #tw04 , #tw05 , #td01 , #td02 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     });
     // コンテンツ02
     $("#bw02").click(function() {
-    $("#w02 , #tw02").toggle();
+    $("#w02 , #tw02").show();
     $('#w01 , #w03 , #w04 , #w05 , #d01 , #d02 , #d03 , #d04 , #r01 , #r02 , #r03 , #r04 , #r05 ,#title01 , #title02 , #title03 , #title00,  #tw01 , #tw03 , #tw04 , #tw05 , #td01 , #td02 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     });
     // コンテンツ03
     $("#bw03").click(function() {
-    $("#w03 , #tw03").toggle();
+    $("#w03 , #tw03").show();
     $('#w01 , #w02 , #w04 , #w05 , #d01 , #d02 , #d03 , #d04 , #r01 , #r02 , #r03 , #r04 , #r05 ,#title01 , #title02 , #title03 , #title00 , #tw01 , #tw02 , #tw04 , #tw05 , #td01 , #td02 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     });
     // コンテンツ04
     $("#bw04").click(function() {
-    $("#w04 , #tw04").toggle();
+    $("#w04 , #tw04").show();
     $('#w01 , #w02 , #w03 , #w05 , #d01 , #d02 , #d03 , #d04 , #r01 , #r02 , #r03 , #r04 , #r05 ,#title01 , #title02 , #title03 , #title00 , #tw01 , #tw02 , #tw03 , #tw05 , #td01 , #td02 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     });
     // コンテンツ05
     $("#bw05").click(function() {
-    $("#w05 , #tw05").toggle();
+    $("#w05 , #tw05").show();
     $('#w01 , #w02 , #w03 , #w04 , #d01 , #d02 , #d03 , #d04, #r01 , #r02 , #r03 , #r04 , #r05 ,#title01 , #title02 , #title03 , #title00 ,  #tw01 , #tw02 , #tw03 , #tw04 , #td01 , #td02 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     });
   </script>
@@ -167,27 +167,27 @@
   <script>
     // $('#bw01 , #bw02 , #bw03 , #bw04 , #bw05 , #w01 , #w02 , #w03 , #w04 , #w05 , #bd01 , #bd02 , #bd03 , #bd04 , #d01 , #d02 , #d03 , #d04 , #br01 , #br02 , #br03 , #br04 , #br05 , #r01 , #r02 , #r03 , #r04 , #r05 , #title01 , #title02 , #title03 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 , #td01 , #td02 , #td03 , #tr01 , #tr02 , #tr03 , #tr04 , #tr04 , #tr05 ').hide();
     $("#button2").click(function() {
-      $("#bd01 , #bd02 , #bd03 , #bd04 , #title02").toggle();
+      $("#bd01 , #bd02 , #bd03 , #bd04 , #title02").show();
       $('#w01 , #w02 , #w03 , #w04 , #w05 , #bw01 , #bw02 , #bw03 , #bw04 , #bw05 , #d01 , #d02 , #d03 , #d04 , #r01 , #r02 , #r03 , #r04 , #r05 , #br01 , #br02 , #br03 , #br04 , #br05 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 ,  #td01 , #td02 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 , #title01 , #title03 ,#title00').hide();
     });
     // コンテンツ01
     $("#bd01").click(function() {
-    $("#d01 , #td01").toggle();
+    $("#d01 , #td01").show();
     $('#w01 , #w02 , #w03 , #w04 , #w05 , #d02 , #d03 , #d04 , #r01 , #r02 , #r03 , #r04 , #r05,#title01 , #title02 , #title03 , #title00 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 , #td02 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     });
     // コンテンツ02
     $("#bd02").click(function() {
-    $("#d02 ,#td02").toggle();
+    $("#d02 ,#td02").show();
     $('#w01 , #w02 , #w03 , #w04 , #w05 , #d01 , #d03 , #d04 , #r01 , #r02 , #r03 , #r04 , #r05 ,#title01 , #title02 , #title03 , #title00 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 , #td01 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     });
     // コンテンツ03
     $("#bd03").click(function() {
-    $("#d03 ,#td03").toggle();
+    $("#d03 ,#td03").show();
     $('#w01 , #w02 , #w03 , #w04 , #w05 , #d01 , #d02 , #d04 , #r01 , #r02 , #r03 , #r04 , #r05 ,#title01 , #title02 , #title03 , #title00 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 , #td01 , #td02 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     });
     // コンテンツ04
     $("#bd04").click(function() {
-    $("#d04 ,#td04").toggle();
+    $("#d04 ,#td04").show();
     $('#w01 , #w02 , #w03 , #w04 , #w05 , #d01 , #d02 , #d03 , #r01 , #r02 , #r03 , #r04 , #r05 ,#title01 , #title02 , #title03 , #title00 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 , #td01 , #td02 , #td03 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     });
   </script>
@@ -196,32 +196,32 @@
   <script>
     // $('#bw01 , #bw02 , #bw03 , #bw04 , #bw05 , #w01 , #w02 , #w03 , #w04 , #w05 , #bd01 , #bd02 , #bd03 , #bd04 , #d01 , #d02 , #d03 , #d04 , #br01 , #br02 , #br03 , #br04 , #br05 , #r01 , #r02 , #r03 , #r04 , #r05 , #title01 , #title02 , #title03 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 , #td01 , #td02 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     $("#button3").click(function() {
-      $("#br01 , #br02 , #br03 , #br04 , #br05 ,#title03").toggle();
+      $("#br01 , #br02 , #br03 , #br04 , #br05 ,#title03").show();
       $('#w01 , #w02 , #w03 , #w04 , #w05 , #bw01 , #bw02 , #bw03 , #bw04 , #bw05 , #d01 , #d02 , #d03 , #d04 , #bd01 , #bd02 , #bd03 , #bd04 , #r01 , #r02 , #r03 , #r04 , #r05 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 ,  #td01 , #td02 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 , #title01 , #title02 , #title00').hide();
     });
     // コンテンツ01
     $("#br01").click(function() {
-    $("#r01 ,#tr01").toggle();
+    $("#r01 ,#tr01").show();
     $('#w01 , #w02 , #w03 , #w04 , #w05 , #d01 , #d02 , #d03 , #d04 , #r02 , #r03 , #r04 , #r05 ,#title01 , #title02 , #title03 , #title00 , #tw01 , #tw02 , #tw03  , #tw04 , #tw05 , #td01 , #td03, #td02 , #td04 , #tr02 , #tr03 , #tr04 , #tr05 ').hide();
     });
     // コンテンツ02
     $("#br02").click(function() {
-    $("#r02 ,#tr02").toggle();
+    $("#r02 ,#tr02").show();
     $('#w01 , #w02 , #w03 , #w04 , #w05 , #d01 , #d02 , #d03 , #d04 , #r01 , #r03 , #r04 , #r05 ,#title01 , #title02 , #title03 , #title00 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 , #td01 , #td03, #td02 , #td04 , #tr01 , #tr03 , #tr04 , #tr05 ').hide();
     });
     // コンテンツ03
     $("#br03").click(function() {
-    $("#r03 ,#tr03").toggle();
+    $("#r03 ,#tr03").show();
     $('#w01 , #w02 , #w03 , #w04 , #w05 , #d01 , #d02 , #d03 , #d04 , #r01 , #r02 , #r04 , #r05 ,#title01 , #title02 , #title03 , title00 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 , #td01 , #td03, #td02 , #td04 , #tr01 , #tr02 , #tr04 , #tr05 ').hide();
     });
     // コンテンツ04
     $("#br04").click(function() {
-    $("#r04 ,#tr04").toggle();
+    $("#r04 ,#tr04").show();
     $('#w01 , #w02 , #w03 , #w04 , #w05 , #d01 , #d02 , #d03 , #d04 , #r01 , #r02 , #r03 , #r05 ,#title01 , #title02 , #title03 , #title00 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 , #td01 , #td03, #td02 , #td04 , #tr01 , #tr02 , #tr03 , #tr05 ').hide();
     });
     // コンテンツ05
     $("#br05").click(function() {
-    $("#r05 , #tr05").toggle();
+    $("#r05 , #tr05").show();
     $('#w01 , #w02 , #w03 , #w04 , #w05 , #d01 , #d02 , #d03 , #d04 , #r01 , #r02 , #r03 , #r04 ,#title01 , #title02 , #title03 , #title00 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 , #td01 , #td03, #td02 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 ').hide();
     });
   </script>
