--- a/pc/file.html
+++ b/pc/file.html
@@ -34,12 +34,12 @@
     // 非表示
     $('#content_profile').hide();
     $("#home").click(function() {
-        $("#content_home").toggle();
+        $("#content_home").show();
         $('#content_profile').hide();
       });
       // プロファイルのデータの表示
       $("#profile").click(function() {
-        $("#content_profile").toggle();
+        $("#content_profile").show();
         $('#content_home').hide();
       });
   </script>
