--- a/sp/index.html
+++ b/sp/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
   <title>Y.KOYANAGAWA</title>
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/png" href="../spimg/icon.png" sizes="16x16" />
