--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
   <source src="img/pc_movie.mp4">
 </video>
 
-<video id="sp_movie">
-  <source src="img/sp_movie.mp4">
-</video>
+<div id="movie">
+  <video id="sp_movie">
+    <source src="img/sp_movie.mp4">
+  </video>
+</div>
 
 <section class="title_wrapper">
   <section class="title">
