--- a/pc/home.html
+++ b/pc/home.html
@@ -133,7 +133,7 @@
     $(this).css('color','black');
 
     $("#button1").click(function() {
-      $("#bw01 , #bw02 , #bw03 , #bw04 , #bw05 , #title01").toggle();
+      $("#bw01 , #bw02 , #bw03 , #bw04 , #bw05 , #title01").show();
       $('#w01 , #w02 , #w03 , #w04 , #w05 , #bd01 , #bd02 , #bd03 , #bd04 , #d01 , #d02 , #d03 , #d04 , #r01 , #r02 , #r03 , #r04 , #r05 , #br01 , #br02 , #br03 , #br04 , #br05 , #tw01 , #tw02 , #tw03 , #tw04 , #tw05 ,  #td01 , #td02 , #td03 , #td04 , #tr01 , #tr02 , #tr03 , #tr04 , #tr05 , #title02 , #title03 , #title00 ').hide();
     });
     // コンテンツ01
