--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     </div>
     <section class="button">
       <div class="btn01">
-        <button type="button" id="pc_btn">PC</button>
+        <a href="pc/index.html" target="_self">PC</a></button>
       </div>
       <div class="btn02">
-        <button type="button" id="sp_btn">SP</button>
+        <a href="sp/index.html" target="_self">SP</a></button>
       </div>
     </section>
   </section>
@@ -47,32 +47,6 @@
 <script>
   $('#pc_btn').fadeIn(2000);
   $('#sp_btn').fadeIn(2000);
-</script>
-
-<!-- PC映像アクション表示 -->
-<script>
-  document.getElementById('pc_btn').addEventListener('click', function() {
-    document.getElementById('pc_movie').play();
-    $('#pc_movie').fadeIn(2000);
-    $('#sp_movie , #pc_btn , #sp_btn , .name').hide();
-    const video = document.getElementById('pc_movie');
-    video.addEventListener("ended", (event) => {
-    window.location.href = 'pc/index.html';
-    });
-  });
-</script>
-
-<!-- SP映像アクション表示 -->
-<script>
-  document.getElementById('sp_btn').addEventListener('click', function() {
-    document.getElementById('sp_movie').play();
-    $('#sp_movie').fadeIn(2000);
-    $('#pc_movie , #pc_btn , #sp_btn , .name').hide();
-    const video = document.getElementById('sp_movie');
-    video.addEventListener("ended", (event) => {
-    window.location.href = 'sp/index.html';
-    });
-  });
 </script>
 
 </body>
