--- a/pc/index.html
+++ b/pc/index.html
@@ -9,9 +9,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Noto+Sans+JP&display=swap" rel="stylesheet">
-
 </head>
 <body>
+  
+  <div id="opv-wrap">
+    <video id="opv" autoplay muted playsinline>
+      <source src="../img/movie_pc.mp4" type="video/mp4">
+    </video>
+  </div>
+  
   <main>
     <section class="back">
       <a href="../index.html"><img src="../pcimg/mark.png" width="8px"><p>BACK TO START</p></a>
@@ -33,20 +39,22 @@
         <p>REALevent</p>
       </div>
     </section>
+
+    <section id="file">
+         <iframe src="file.html" frameBorder="0" width="80%" height="600" style="border-radius:20px;box-shadow: 0 0 10px #8080808c;" style="border: none;"></iframe>
+      <section id="close">
+        <input type="image" value="非表示" src="../pcimg/close.png" width="18"
+        onclick="document.getElementById('file').style.visibility = 'hidden';">
+      </section>
+    </section>
   </main>
 
-  <section id="file">
-       <iframe src="file.html" frameBorder="0" width="80%" height="600" style="border-radius:20px;box-shadow: 0 0 10px #8080808c;" style="border: none;"></iframe>
-    <section id="close">
-      <input type="image" value="非表示" src="../pcimg/close.png" width="18"
-      onclick="document.getElementById('file').style.visibility = 'hidden';">
-    </section>
-  </section>
+  <footer></footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+ <!-- ボタンの装飾 -->
 <script>
-  // ボタンの装飾
   $(".file01").click(function() {
   $(".file02 , .file03").removeClass('active');
   $(this).addClass('active');
@@ -60,26 +68,26 @@
   $(this).addClass('active');
 });
 
-// document.body.click(function() {
-//   $(".file01 , .file02 , .file03").removeClass('active');
-// });
-
-// $(function () {
-//     //ウインドウ内クリックでの処理
-//     document.body.onclick = function ( event ) {
-//         removeClass('active');
-//     }
-// });
-
-// document.body.click(function() {
-//   $(".file02 , .file03").removeClass('active');
-//   $(this).addClass('active');
-// });
-
   $('.file01').fadeIn(2000);
   $('.file02').fadeIn(2000);
   $('.file03').fadeIn(2000);
 </script>
 
+<!-- 動画の再生 -->
+<script>
+  $(function(){
+  const opVideo = $('#opv').get(0);
+  $('#opv-wrap').fadeIn(0);
+  opVideo.addEventListener('loadedmetadata', function() {
+    const playTime = opVideo.duration * 1000 - 1000;
+    setTimeout(function(){
+      $('#opv-wrap').fadeOut(1000, function(){
+        $("main,footer").fadeIn(1000);
+      });
+    }, playTime);
+  });
+  });
+  </script>
+  
 </body>
 </html>
